<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/display_image"
        android:scaleType="fitCenter" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dmb"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/headerGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
        <ImageView
            android:id="@+id/topImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/display_header"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/headerGuide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <ImageView
            android:id="@+id/leftImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/display_left"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@id/headerGuide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/centerMid" />
        <ImageView
            android:id="@+id/rightImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/display_right"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@id/headerGuide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/centerMid"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
